--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parcel-jest-base",
   "version": "1.0.0",
-  "description": "",
+  "description": "npm install",
   "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
@@ -17,5 +17,515 @@
     "babel-jest": "^27.4.6",
     "jest": "^27.4.7",
     "parcel": "^2.2.0"
-  }
+  },
+  "main": "index.js",
+  "dependencies": {
+    "abortcontroller-polyfill": "^1.7.3",
+    "abab": "^2.0.5",
+    "acorn-globals": "^4.3.4",
+    "acorn-walk": "^6.2.0",
+    "agent-base": "^6.0.2",
+    "ajv": "^6.12.6",
+    "ansi-html-community": "^0.0.8",
+    "alphanum-sort": "^1.0.2",
+    "ansi-escapes": "^4.3.2",
+    "array-equal": "^1.0.0",
+    "ansi-styles": "^3.2.1",
+    "array-union": "^2.1.0",
+    "argparse": "^1.0.10",
+    "asn1": "^0.2.4",
+    "asn1.js": "^5.4.1",
+    "async": "^0.9.2",
+    "astral-regex": "^2.0.0",
+    "assert-plus": "^1.0.0",
+    "asynckit": "^0.4.0",
+    "available-typed-arrays": "^1.0.5",
+    "async-limiter": "^1.0.1",
+    "aws4": "^1.11.0",
+    "astring": "^1.8.1",
+    "babel-plugin-jest-hoist": "^27.4.0",
+    "aws-sign2": "^0.7.0",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "babel-plugin-polyfill-regenerator": "^0.3.1",
+    "babel-plugin-polyfill-corejs2": "^0.3.1",
+    "babel-preset-current-node-syntax": "^1.0.1",
+    "babel-plugin-istanbul": "^6.1.1",
+    "balanced-match": "^1.0.2",
+    "babel-preset-jest": "^27.4.0",
+    "bcrypt-pbkdf": "^1.0.2",
+    "babel-plugin-polyfill-corejs3": "^0.5.1",
+    "base64-js": "^1.5.1",
+    "base-x": "^3.0.9",
+    "bl": "^4.1.0",
+    "bn.js": "^5.2.0",
+    "big.js": "^5.2.2",
+    "brace-expansion": "^1.1.11",
+    "boolbase": "^1.0.0",
+    "browser-process-hrtime": "^1.0.0",
+    "brorand": "^1.1.0",
+    "browserify-aes": "^1.2.0",
+    "browserify-cipher": "^1.0.1",
+    "browserify-rsa": "^4.1.0",
+    "browserify-zlib": "^0.2.0",
+    "browserify-des": "^1.0.2",
+    "browserify-sign": "^4.2.1",
+    "browserslist": "^4.19.1",
+    "buffer-xor": "^1.0.3",
+    "bser": "^2.1.1",
+    "builtin-status-codes": "^3.0.0",
+    "buffer-from": "^1.1.2",
+    "bytes": "^3.0.0",
+    "caniuse-lite": "^1.0.30001300",
+    "caniuse-api": "^3.0.0",
+    "chalk": "^2.4.2",
+    "call-bind": "^1.0.2",
+    "char-regex": "^1.0.2",
+    "cliui": "^7.0.4",
+    "cipher-base": "^1.0.4",
+    "caseless": "^0.12.0",
+    "chrome-trace-event": "^1.0.3",
+    "ci-info": "^3.3.0",
+    "clone": "^2.1.2",
+    "cjs-module-lexer": "^1.2.2",
+    "collect-v8-coverage": "^1.0.1",
+    "color-convert": "^1.9.3",
+    "camelcase": "^5.3.1",
+    "command-exists": "^1.2.9",
+    "co": "^4.6.0",
+    "color-name": "^1.1.3",
+    "colord": "^2.9.2",
+    "commander": "^2.20.3",
+    "content-disposition": "^0.5.2",
+    "combined-stream": "^1.0.8",
+    "connect": "^3.7.0",
+    "concat-map": "^0.0.1",
+    "constants-browserify": "^1.0.0",
+    "console-browserify": "^1.2.0",
+    "convert-source-map": "^1.8.0",
+    "core-util-is": "^1.0.2",
+    "core-js-compat": "^3.20.3",
+    "crypto-browserify": "^3.12.0",
+    "create-hash": "^1.2.0",
+    "create-hmac": "^1.1.7",
+    "cross-spawn": "^6.0.5",
+    "create-ecdh": "^4.0.4",
+    "cssstyle": "^1.4.0",
+    "css-selector-tokenizer": "^0.7.3",
+    "css-modules-loader-core": "^1.1.0",
+    "cssom": "^0.3.8",
+    "cssesc": "^3.0.0",
+    "dashdash": "^1.14.1",
+    "csso": "^4.2.0",
+    "data-urls": "^1.1.0",
+    "debug": "^4.3.2",
+    "deep-is": "^0.1.3",
+    "dedent": "^0.7.0",
+    "deepmerge": "^4.2.2",
+    "decimal.js": "^10.3.1",
+    "defaults": "^1.0.3",
+    "des.js": "^1.0.1",
+    "define-properties": "^1.1.3",
+    "diff-sequences": "^27.4.0",
+    "delayed-stream": "^1.0.0",
+    "detect-newline": "^3.1.0",
+    "dir-glob": "^3.0.1",
+    "detect-libc": "^1.0.3",
+    "diffie-hellman": "^5.0.3",
+    "domexception": "^1.0.1",
+    "dotenv-expand": "^5.1.0",
+    "electron-to-chromium": "^1.4.46",
+    "ecc-jsbn": "^0.1.2",
+    "ee-first": "^1.1.1",
+    "emittery": "^0.8.1",
+    "ejs": "^3.1.6",
+    "emojis-list": "^3.0.0",
+    "emphasize": "^4.2.0",
+    "elliptic": "^6.5.4",
+    "emoji-regex": "^8.0.0",
+    "error-ex": "^1.3.2",
+    "encodeurl": "^1.0.2",
+    "es-abstract": "^1.18.5",
+    "entities": "^2.2.0",
+    "escape-html": "^1.0.3",
+    "es6-object-assign": "^1.1.0",
+    "es-to-primitive": "^1.2.1",
+    "escalade": "^3.1.1",
+    "esprima": "^4.0.1",
+    "events": "^3.3.0",
+    "estraverse": "^4.3.0",
+    "eventemitter3": "^4.0.7",
+    "escape-string-regexp": "^1.0.5",
+    "esutils": "^2.0.3",
+    "execa": "^5.1.1",
+    "evp_bytestokey": "^1.0.3",
+    "extend": "^3.0.2",
+    "exit": "^0.1.2",
+    "expect": "^27.4.6",
+    "extsprintf": "^1.3.0",
+    "fast-deep-equal": "^3.1.3",
+    "fast-levenshtein": "^2.0.6",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-url-parser": "^1.1.3",
+    "fastest-levenshtein": "^1.0.12",
+    "fastparse": "^1.1.2",
+    "fastq": "^1.13.0",
+    "fault": "^1.0.4",
+    "fb-watchman": "^2.0.1",
+    "filelist": "^1.0.2",
+    "find-up": "^4.1.0",
+    "finalhandler": "^1.1.2",
+    "follow-redirects": "^1.14.7",
+    "forever-agent": "^0.6.1",
+    "fs.realpath": "^1.0.0",
+    "foreach": "^2.0.5",
+    "form-data": "^2.3.3",
+    "format": "^0.2.2",
+    "gensync": "^1.0.0-beta.2",
+    "generic-names": "^2.0.1",
+    "function-bind": "^1.1.1",
+    "get-caller-file": "^2.0.5",
+    "get-package-type": "^0.1.0",
+    "globby": "^11.1.0",
+    "get-stream": "^6.0.1",
+    "get-intrinsic": "^1.1.1",
+    "glob": "^7.1.7",
+    "getpass": "^0.1.7",
+    "har-validator": "^5.1.5",
+    "graceful-fs": "^4.2.8",
+    "globals": "^11.12.0",
+    "har-schema": "^2.0.0",
+    "has": "^1.0.3",
+    "has-flag": "^3.0.0",
+    "hash-base": "^3.1.0",
+    "has-ansi": "^2.0.0",
+    "has-bigints": "^1.0.1",
+    "has-symbols": "^1.0.2",
+    "hash.js": "^1.1.7",
+    "highlight.js": "^10.4.1",
+    "has-tostringtag": "^1.0.0",
+    "hmac-drbg": "^1.0.1",
+    "http-proxy": "^1.18.1",
+    "html-tags": "^1.2.0",
+    "html-encoding-sniffer": "^1.0.2",
+    "html-escaper": "^2.0.2",
+    "http-proxy-agent": "^4.0.1",
+    "http-signature": "^1.2.0",
+    "icss-replace-symbols": "^1.1.0",
+    "https-proxy-agent": "^5.0.0",
+    "human-signals": "^2.1.0",
+    "http-proxy-middleware": "^1.3.1",
+    "icss-utils": "^4.1.1",
+    "https-browserify": "^1.0.0",
+    "import-local": "^3.1.0",
+    "iconv-lite": "^0.4.24",
+    "internal-slot": "^1.0.3",
+    "imurmurhash": "^0.1.4",
+    "ignore": "^5.2.0",
+    "inflight": "^1.0.6",
+    "indexes-of": "^1.0.1",
+    "is-arguments": "^1.1.1",
+    "inherits": "^2.0.4",
+    "iferr": "^1.0.2",
+    "ieee754": "^1.2.1",
+    "is-bigint": "^1.0.4",
+    "is-boolean-object": "^1.1.2",
+    "is-callable": "^1.2.4",
+    "is-arrayish": "^0.2.1",
+    "is-date-object": "^1.0.5",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-docker": "^2.2.1",
+    "is-core-module": "^2.5.0",
+    "is-generator-fn": "^2.1.0",
+    "is-glob": "^4.0.1",
+    "is-html": "^1.1.0",
+    "is-generator-function": "^1.0.10",
+    "is-interactive": "^1.0.0",
+    "is-json": "^2.0.1",
+    "is-number-object": "^1.0.6",
+    "is-regex": "^1.1.4",
+    "is-nan": "^1.3.2",
+    "is-negative-zero": "^2.0.1",
+    "is-plain-obj": "^3.0.0",
+    "is-potential-custom-element-name": "^1.0.1",
+    "is-typedarray": "^1.0.0",
+    "is-symbol": "^1.0.4",
+    "is-stream": "^2.0.1",
+    "is-typed-array": "^1.1.8",
+    "is-unicode-supported": "^0.1.0",
+    "is-string": "^1.0.7",
+    "isarray": "^1.0.0",
+    "isexe": "^2.0.0",
+    "istanbul-lib-coverage": "^3.2.0",
+    "istanbul-lib-report": "^3.0.0",
+    "istanbul-lib-instrument": "^5.1.0",
+    "is-url": "^1.2.4",
+    "istanbul-lib-source-maps": "^4.0.1",
+    "istanbul-reports": "^3.1.3",
+    "isstream": "^0.1.2",
+    "jest-changed-files": "^27.4.2",
+    "jest-circus": "^27.4.6",
+    "jake": "^10.8.2",
+    "jest-cli": "^27.4.7",
+    "jest-diff": "^27.4.6",
+    "jest-config": "^27.4.7",
+    "jest-docblock": "^27.4.0",
+    "jest-environment-node": "^27.4.6",
+    "jest-each": "^27.4.6",
+    "jest-environment-jsdom": "^27.4.6",
+    "jest-jasmine2": "^27.4.6",
+    "jest-get-type": "^27.4.0",
+    "jest-haste-map": "^27.4.6",
+    "jest-message-util": "^27.4.6",
+    "jest-leak-detector": "^27.4.6",
+    "jest-matcher-utils": "^27.4.6",
+    "jest-pnp-resolver": "^1.2.2",
+    "jest-mock": "^27.4.6",
+    "jest-resolve": "^27.4.6",
+    "jest-regex-util": "^27.4.0",
+    "jest-runtime": "^27.4.6",
+    "jest-resolve-dependencies": "^27.4.6",
+    "jest-runner": "^27.4.6",
+    "jest-serializer": "^27.4.0",
+    "jest-util": "^27.4.2",
+    "jest-validate": "^27.4.6",
+    "jest-worker": "^27.4.6",
+    "jest-snapshot": "^27.4.6",
+    "jest-watcher": "^27.4.6",
+    "jsbn": "^0.1.1",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^3.14.1",
+    "jsdom": "^14.1.0",
+    "json-parse-even-better-errors": "^2.3.1",
+    "jsesc": "^2.5.2",
+    "json-schema": "^0.2.3",
+    "json-stringify-safe": "^5.0.1",
+    "json5": "^1.0.1",
+    "json-source-map": "^0.6.1",
+    "json-schema-traverse": "^0.4.1",
+    "jsprim": "^1.4.1",
+    "kleur": "^3.0.3",
+    "levn": "^0.3.0",
+    "leven": "^3.1.0",
+    "lilconfig": "^2.0.4",
+    "locate-path": "^5.0.0",
+    "lines-and-columns": "^1.2.4",
+    "loader-utils": "^1.4.0",
+    "lmdb": "^2.1.5",
+    "lodash.clone": "^4.5.0",
+    "lodash.camelcase": "^4.3.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
+    "lodash.sortby": "^4.7.0",
+    "lodash.memoize": "^4.1.2",
+    "lodash.uniq": "^4.5.0",
+    "lowlight": "^1.17.0",
+    "lru-cache": "^6.0.0",
+    "merge-stream": "^2.0.0",
+    "make-dir": "^3.1.0",
+    "md5.js": "^1.3.5",
+    "mime-types": "^2.1.32",
+    "makeerror": "^1.0.12",
+    "miller-rabin": "^4.0.1",
+    "merge2": "^1.4.1",
+    "minimalistic-assert": "^1.0.1",
+    "mime-db": "^1.49.0",
+    "mkdirp": "^0.5.5",
+    "minimalistic-crypto-utils": "^1.0.1",
+    "minimatch": "^3.0.4",
+    "ms": "^2.1.2",
+    "minimist": "^1.2.5",
+    "nan": "^2.15.0",
+    "msgpackr": "^1.5.2",
+    "ncp": "^2.0.0",
+    "nanoid": "^3.2.0",
+    "natural-compare": "^1.4.0",
+    "msgpackr-extract": "^1.0.16",
+    "node-int64": "^0.4.0",
+    "nice-try": "^1.0.5",
+    "node-gyp-build": "^4.3.0",
+    "node-releases": "^2.0.1",
+    "nullthrows": "^1.1.1",
+    "oauth-sign": "^0.9.0",
+    "nwsapi": "^2.2.0",
+    "normalize-path": "^3.0.0",
+    "npm-run-path": "^4.0.1",
+    "object-is": "^1.1.5",
+    "on-finished": "^2.3.0",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.2",
+    "optionator": "^0.8.3",
+    "once": "^1.4.0",
+    "ordered-binary": "^1.2.3",
+    "os-browserify": "^0.3.0",
+    "open": "^7.4.2",
+    "p-try": "^2.2.0",
+    "p-limit": "^2.3.0",
+    "pako": "^1.0.11",
+    "p-locate": "^4.1.0",
+    "parent-module": "^1.0.1",
+    "parse-asn1": "^5.1.6",
+    "parse5": "^5.1.0",
+    "path-exists": "^4.0.0",
+    "parseurl": "^1.3.3",
+    "path-is-absolute": "^1.0.1",
+    "path-parse": "^1.0.7",
+    "path-is-inside": "^1.0.2",
+    "path-key": "^2.0.1",
+    "path-to-regexp": "^2.2.1",
+    "pbkdf2": "^3.1.2",
+    "performance-now": "^2.1.0",
+    "path-type": "^4.0.0",
+    "pkg-dir": "^4.2.0",
+    "pn": "^1.1.0",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "pirates": "^4.0.4",
+    "postcss": "^7.0.36",
+    "postcss-modules": "^3.2.2",
+    "postcss-modules-extract-imports": "^1.1.0",
+    "postcss-modules-scope": "^1.1.0",
+    "prelude-ls": "^1.1.2",
+    "postcss-modules-values": "^1.3.0",
+    "postcss-modules-local-by-default": "^1.2.0",
+    "postcss-selector-parser": "^6.0.6",
+    "pretty-format": "^27.4.6",
+    "process": "^0.11.10",
+    "process-nextick-args": "^2.0.1",
+    "public-encrypt": "^4.0.3",
+    "prompts": "^2.4.2",
+    "psl": "^1.8.0",
+    "querystring": "^0.2.0",
+    "punycode": "^1.4.1",
+    "qs": "^6.5.2",
+    "queue-microtask": "^1.2.3",
+    "querystring-es3": "^0.2.1",
+    "randomfill": "^1.0.4",
+    "randombytes": "^2.1.0",
+    "react-is": "^17.0.2",
+    "react-refresh": "^0.9.0",
+    "readable-stream": "^2.3.7",
+    "regenerator-runtime": "^0.13.9",
+    "regenerate-unicode-properties": "^9.0.0",
+    "regenerator-transform": "^0.14.5",
+    "regjsparser": "^0.7.0",
+    "regenerate": "^1.4.2",
+    "regjsgen": "^0.5.2",
+    "regexpu-core": "^4.8.0",
+    "relateurl": "^0.2.7",
+    "request": "^2.88.2",
+    "request-promise-core": "^1.1.4",
+    "request-promise-native": "^1.0.9",
+    "require-directory": "^2.1.1",
+    "resolve": "^1.20.0",
+    "resolve-cwd": "^3.0.0",
+    "resolve.exports": "^1.1.0",
+    "requires-port": "^1.0.0",
+    "ripemd160": "^2.0.2",
+    "safe-buffer": "^5.1.2",
+    "run-parallel": "^1.2.0",
+    "reusify": "^1.0.4",
+    "saxes": "^3.1.11",
+    "sha.js": "^2.4.11",
+    "serve-handler": "^6.1.3",
+    "semver": "^5.7.1",
+    "safer-buffer": "^2.1.2",
+    "shebang-command": "^1.2.0",
+    "setimmediate": "^1.0.5",
+    "shebang-regex": "^1.0.0",
+    "side-channel": "^1.0.4",
+    "signal-exit": "^3.0.3",
+    "sisteransi": "^1.0.5",
+    "source-map": "^0.6.1",
+    "slice-ansi": "^4.0.0",
+    "slash": "^3.0.0",
+    "source-map-js": "^1.0.1",
+    "source-map-support": "^0.5.21",
+    "sshpk": "^1.16.1",
+    "split2": "^3.2.2",
+    "sprintf-js": "^1.0.3",
+    "stack-utils": "^2.0.5",
+    "statuses": "^1.5.0",
+    "stealthy-require": "^1.1.1",
+    "stable": "^0.1.8",
+    "string-hash": "^1.1.3",
+    "string-width": "^4.2.3",
+    "strip-bom": "^4.0.0",
+    "string_decoder": "^1.3.0",
+    "string-length": "^4.0.2",
+    "string.prototype.trimend": "^1.0.4",
+    "string.prototype.trimstart": "^1.0.4",
+    "symbol-tree": "^3.2.4",
+    "strip-final-newline": "^2.0.0",
+    "supports-color": "^5.5.0",
+    "supports-hyperlinks": "^2.2.0",
+    "term-size": "^2.2.1",
+    "test-exclude": "^6.0.0",
+    "terminal-link": "^2.1.1",
+    "throat": "^6.0.1",
+    "timsort": "^0.3.0",
+    "timers-browserify": "^2.0.12",
+    "tmpl": "^1.0.5",
+    "to-fast-properties": "^2.0.0",
+    "tr46": "^1.0.1",
+    "tweetnacl": "^0.14.5",
+    "type-detect": "^4.0.8",
+    "tough-cookie": "^2.5.0",
+    "tunnel-agent": "^0.6.0",
+    "type-check": "^0.3.2",
+    "type-fest": "^0.21.3",
+    "unicode-canonical-property-names-ecmascript": "^2.0.0",
+    "uncss": "^0.17.3",
+    "unbox-primitive": "^1.0.1",
+    "unicode-match-property-ecmascript": "^2.0.0",
+    "unicode-property-aliases-ecmascript": "^2.0.0",
+    "unicode-match-property-value-ecmascript": "^2.0.0",
+    "uniq": "^1.0.1",
+    "universalify": "^0.1.2",
+    "unpipe": "^1.0.0",
+    "url": "^0.11.0",
+    "typedarray-to-buffer": "^3.1.5",
+    "util-deprecate": "^1.0.2",
+    "utility-types": "^3.10.0",
+    "uri-js": "^4.4.1",
+    "v8-compile-cache": "^2.3.0",
+    "v8-to-istanbul": "^8.1.1",
+    "utils-merge": "^1.0.1",
+    "uuid": "^3.4.0",
+    "verror": "^1.10.0",
+    "w3c-hr-time": "^1.0.2",
+    "w3c-xmlserializer": "^1.1.2",
+    "vm-browserify": "^1.1.2",
+    "walker": "^1.0.8",
+    "wcwidth": "^1.0.1",
+    "whatwg-encoding": "^1.0.5",
+    "weak-lru-cache": "^1.2.1",
+    "webidl-conversions": "^4.0.2",
+    "whatwg-mimetype": "^2.3.0",
+    "which-boxed-primitive": "^1.0.2",
+    "which-typed-array": "^1.1.7",
+    "which": "^1.3.1",
+    "whatwg-url": "^7.1.0",
+    "word-wrap": "^1.2.3",
+    "wrappy": "^1.0.2",
+    "xml-name-validator": "^3.0.0",
+    "wrap-ansi": "^7.0.0",
+    "write-file-atomic": "^3.0.3",
+    "xxhash-wasm": "^0.4.2",
+    "xmlchars": "^2.2.0",
+    "y18n": "^5.0.8",
+    "xtend": "^4.0.2",
+    "yallist": "^4.0.0",
+    "yaml": "^1.10.2",
+    "yargs-parser": "^20.2.9",
+    "yargs": "^16.2.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KarenAguayo/TorosVacas.git"
+  },
+  "bugs": {
+    "url": "https://github.com/KarenAguayo/TorosVacas/issues"
+  },
+  "homepage": "https://github.com/KarenAguayo/TorosVacas#readme"
 }
